hphp/test/zend/good/ext/pcntl/tests/pcntl_signal_dispatch.php.skipif
<?php
	if (!extension_loaded("pcntl")) print "skip"; 
	elseif (!function_exists("pcntl_signal")) print "skip pcntl_signal() not available";
	elseif (!function_exists("pcntl_signal_dispatch")) print "skip pcntl_signal_dispatch() not available";
	elseif (!function_exists("posix_kill")) print "skip posix_kill() not available";
	elseif (!function_exists("posix_getpid")) print "skip posix_getpid() not available";
?>