hphp/test/zend/bad/ext/pcntl/tests/pcntl_exec.php.skipif
<?php 
if (!extension_loaded("pcntl")) print "skip"; 
if (!getenv("TEST_PHP_EXECUTABLE") || !is_executable(getenv("TEST_PHP_EXECUTABLE"))) die("skip TEST_PHP_EXECUTABLE not set");
?>